backends2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oceania
  labels:
    name: oceania

---

apiVersion: v1
kind: Namespace
metadata:
  name: europe
  labels:
    name: europe

---

apiVersion: v1
kind: Namespace
metadata:
  name: africa
  labels:
    name: africa

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: badgerv2
  namespace: europe
  labels:
    app: badgerv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: badgerv2
  template:
    metadata:
      labels:
        app: badgerv2
    spec:
      containers:
      - name: badgerv2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: badgerv2
  namespace: europe
spec:
  selector:
    app: badgerv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dingov2
  namespace: oceania
  labels:
    app: dingov2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dingov2
  template:
    metadata:
      labels:
        app: dingov2
    spec:
      containers:
      - name: dingov2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: dingov2
  namespace: oceania
spec:
  selector:
    app: dingov2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgehogv2
  namespace: europe
  labels:
    app: hedgehogv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hedgehogv2
  template:
    metadata:
      labels:
        app: hedgehogv2
    spec:
      containers:
      - name: hedgehogv2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: hedgehogv2
  namespace: europe
spec:
  selector:
    app: hedgehogv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wombatv2
  namespace: oceania
  labels:
    app: wombatv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wombatv2
  template:
    metadata:
      labels:
        app: wombatv2
    spec:
      containers:
      - name: wombatv2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: wombatv2
  namespace: oceania
spec:
  selector:
    app: wombatv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lionv2
  namespace: africa
  labels:
    app: lionv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lionv2
  template:
    metadata:
      labels:
        app: lionv2
    spec:
      containers:
      - name: lionv2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---
apiVersion: v1
kind: Service
metadata:
  name: lionv2
  namespace: africa
spec:
  selector:
    app: lionv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
      

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbokv2
  namespace: africa
  labels:
    app: springbokv2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springbokv2
  template:
    metadata:
      labels:
        app: springbokv2
    spec:
      containers:
      - name: springbokv2
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: springbokv2
  namespace: africa
spec:
  selector:
    app: springbokv2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
