gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway


---


apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: superappsvcnetwork
  namespace: gateway
spec:
  gatewayClassName: amazon-vpc-lattice
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
