eu-route-weight-custom-listener.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: animals
  namespace: europe
spec:
  hostnames:
  - europe.demo.vpc-lattice.com 
  parentRefs:
#  - name: prod
 #   namespace: gateway
  #  sectionName: wildcard-demo-vpc-lattice
  - name: dev
    namespace: gateway
    sectionName: wildcard-demo-vpc-lattice
#  - name: staging
#    namespace: gateway
#    sectionName: wildcard-demo-vpc-lattice
  #- kind: Gateway
  rules:
  - backendRefs:  
    - name: badger
      namespace: europe
      kind: Service
      weight: 50
      port: 80
    - name: hedgehog
      namespace: europe
      kind: Service
      weight: 50
      port: 80
