serviceImport.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: badgerv1
  namespace: europe
  labels:
    app: badgerv1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: badgerv1
  template:
    metadata:
      labels:
        app: badgerv1
    spec:
      containers:
      - name: badgerv1
        image: public.ecr.aws/x2j8p8w7/http-server:latest
---

apiVersion: v1
kind: Service
metadata:
  name: badgerv1
  namespace: europe
spec:
  selector:
    app: badgerv1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
      
---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: new-weighted
  namespace: europe
spec:
  hostnames:
  - neweurope.demo.vpc-lattice.com 
  parentRefs:
  - name: prod
    namespace: gateway
    sectionName: wildcard-demo-vpc-lattice
  - name: dev
    namespace: gateway
    sectionName: wildcard-demo-vpc-lattice
  - name: staging
    namespace: gateway
    sectionName: wildcard-demo-vpc-lattice
  rules:
  - backendRefs:  
    - name: badgerv1
      namespace: europe
      kind: Service
      weight: 50
      port: 80
    - name: badgerv2
      namespace: europe
      kind: ServiceImport
      weight: 50
